# qt

./: README.md
charthome_server/: CMakeLists.txt  main.cpp
charthome_server/include/: CServer.h  CSession.h  LogicSystem.h  const.h
charthome_server/src/: CServer.cpp  CSession.cpp  LogicSystem.cpp  MsgNode.cpp
chat_home/: chat_home.pro  chatwdt.cpp  chatwdt.h  chatwdt.ui  client.cpp  client.h  login_wdt.cpp  login_wdt.h  login_wdt.ui  main.cpp
message_manage_school/: login.cpp  login.h  login.ui  main.cpp  managewidget.cpp  managewidget.h  managewidget.ui  message_manage_school.pro  people.h  publicinfo.cpp  publicinfo.h  student.cpp  student.h  studentwidget.cpp  studentwidget.h  studentwidget.ui  updatameg.cpp  updatameg.h  updatameg.ui
